Fix project button functionality

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         
                         <h2>Youtube to Spotify Extension</h2>
                         <p class="about__text">A Google Chrome extension which adds a button under youtube videos that allows you to add music you find on youtube with the click of a button.</p>
-                        <a href="" class="button" onclick="location.href='https://github.com/yabouyou/YoutubeToSpotify'" type="button">See Project on Github</a>
+                        <a class="button" onclick="location.href='https://github.com/yabouyou/YoutubeToSpotify'" type="button">See Project on Github</a>
                     </div>
                     <div class="work__img">
                         <img src="https://raw.githubusercontent.com/yabouyou/WikipediaTreeVisualizer/master/sample.gif" style="padding-bottom: 10px" alt="">
@@ -81,7 +81,7 @@
                         <p class="about__text">
                             Creates an interactive tree of related articles about people on Wikipedia using the BeautifulSoup webscraping library on Python.
                         </p>
-                        <a href="" class="button" onclick="location.href='https://github.com/yabouyou/WikipediaTreeVisualizer'">See Project on Github</a>
+                        <a class="button" onclick="location.href='https://github.com/yabouyou/WikipediaTreeVisualizer'" type="button">See Project on Github</a>
                     </div>
                     <div class="work__img">
                         <img src="https://github.com/yabouyou/learning-timer/blob/master/demo.gif?raw=true" alt="" style="padding-bottom: 10px">
@@ -89,7 +89,7 @@
                         <p class="about__text">
                             Chrome Extension that peroidically blocks web-browsing until a short puzzle is solved.
                         </p>
-                        <a href="" class="button" style="margin-top: 24px;" onclick="location.href='https://github.com/yabouyou/learning-timer'">See See Project on Github</a>
+                        <a class="button" style="margin-top: 24px;" onclick="location.href='https://github.com/yabouyou/learning-timer'" type="button">See See Project on Github</a>
                     </div>
                     <div class="work__img">
                         <img src="https://github.com/yabouyou/Tic-Tac-Toe-Server/raw/master/demo.gif" style="padding-bottom: 10px" alt="">
@@ -98,7 +98,7 @@
                         <p class="about__text">
                             A server written in C which allows users to join or spectate a game of Tic Tac Toe using parrallel processing and sockets.
                         </p>
-                        <a href="" class="button" onclick="location.href='https://github.com/yabouyou/Tic-Tac-Toe-Server'">See Project on Github</a>
+                        <a class="button" onclick="location.href='https://github.com/yabouyou/Tic-Tac-Toe-Server'" type="button">See Project on Github</a>
                     </div>
                 </div>
             </section>
