--- a/index.html
+++ b/index.html
@@ -53,8 +53,13 @@
                     </div>
                     
                     <div>
-                        <h2 class="about__subtitle">I'm Yaman</h2>
-                        <p class="about__text">I'm yaman, I like to code.</p>           
+                        <h2 class="about__subtitle">A few words about me.</h2>
+                        <p class="about__text">
+                            I'm a student completing my third year in the Computer Science specialist and Math Major programs at the University of Toronto. 
+                            I enjoy playing guitar, weight-lifting, public speaking, and creating software that empowers people to improve 
+                            their relationship with technology.
+                            I'm currently exploring creating data visualizations of Twitter usage to promote digit well-being.
+                        </p>           
                     </div>                                   
                 </div>
             </section>
