--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             I'm a student completing my third year in the Computer Science specialist and Math Major programs at the University of Toronto. 
                             I enjoy playing guitar, weight-lifting, public speaking, and creating software that empowers people to improve 
                             their relationship with technology.
-                            I'm currently exploring creating data visualizations of Twitter usage to promote digit well-being.
+                            I'm currently exploring creating data visualizations of Twitter usage to promote digit well-being. Check out some of my past projects below!
                         </p>           
                     </div>                                   
                 </div>
