button typo fix

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <p class="about__text">
                             Chrome Extension that peroidically blocks web-browsing until a short puzzle is solved.
                         </p>
-                        <a class="button" style="margin-top: 24px;" onclick="location.href='https://github.com/yabouyou/learning-timer'" type="button">See See Project on Github</a>
+                        <a class="button" style="margin-top: 24px;" onclick="location.href='https://github.com/yabouyou/learning-timer'" type="button">See Project on Github</a>
                     </div>
                     <div class="work__img">
                         <img src="https://github.com/yabouyou/Tic-Tac-Toe-Server/raw/master/demo.gif" style="padding-bottom: 10px" alt="">
