--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <link rel="stylesheet" href="styles.css">
 
 
-        <title>Portfolio website complete</title>
+        <title>Portfolio Website</title>
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     </head>
     <body>
         <!--===== HEADER =====-->
