Change project description

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <img src="https://github.com/yabouyou/YoutubeToSpotify/blob/main/demo.gif?raw=true" style="padding-bottom: 10px" alt="">
                         
                         <h2>Youtube to Spotify Extension</h2>
-                        <p class="about__text">A Google Chrome extension which adds a button under youtube videos that allows you to add music you find on youtube with the click of a button.</p>
+                        <p class="about__text">A Google Chrome extension which adds a button under youtube videos that allows you to add music to your spotify library with the click of a button.</p>
                         <a class="button" onclick="location.href='https://github.com/yabouyou/YoutubeToSpotify'" type="button">See Project on Github</a>
                     </div>
                     <div class="work__img">
