--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                    
                     <div class="contact__img">
                         <i class="fa fa-envelope-square" style="font-size:128px; margin-bottom: 1rem;"></i>
-                        <h1>yaman.abouyouniss@gmail.com</h1>
+                        <h1>yaman.abouyouniss@mail.utoronto.ca</h1>
                     </div>     
                     <div class="contact__img">
                         <i class="fa fa-linkedin-square" style="font-size:128px; margin-bottom: 1rem;"></i>
